--- a/agent/config.yaml.example
+++ b/agent/config.yaml.example
@@ -1,6 +1,6 @@
 # LLM Configuration
 llm:
-  api_key: ""
+  api_key: "sk-xoadryhpubnvadszkevovyqrjmbjpehgkhdlewwrizjffofm"
   api_base: "https://api.siliconflow.cn/v1"
   model: "deepseek-ai/DeepSeek-V3.1-Terminus"
   temperature: 0.7
@@ -18,6 +18,9 @@ skills:
   enabled: true
 
 # Agent Configuration
+  # Macro Data Skill
+  fred_api_key: "YOUR_FRED_API_KEY"  # Get from https://fred.stlouisfed.org/docs/api/api_key.html
+
 agent:
   max_iterations: 10
   verbose: true
