--- a/frontendV2/package.json
+++ b/frontendV2/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.24",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
