--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -33,6 +33,8 @@ akshare>=1.12.900
 yfinance>=0.2.0
 
 # Search
+tavily-python>=0.3.0
+google-search-results>=2.4.2
 duckduckgo-search>=6.0.0
 ddgs>=9.0.0
 
