--- a/.config.yaml.example
+++ b/.config.yaml.example
@@ -9,7 +9,10 @@ api_keys:
   # Tavily Search API (used for market news search)
   # Get your key at: https://tavily.com
   tavily: "your_tavily_api_key_here"
-  
+
+  steel: "steel.dev api key"
+
+
   # LlamaCloud API (used for PDF parsing of financial reports)
   # Get your key at: https://cloud.llamaindex.ai
   llama_cloud: "your_llama_cloud_api_key_here"
