--- a/example.config.yaml
+++ b/example.config.yaml
@@ -14,6 +14,8 @@ api_keys:
   # LLM Providers (Optional, used by some skills)
   openai: "sk-xxxxxxxxxxxx"
   siliconflow: "sk-xxxxxxxxxxxx"
+model: deepseek-ai/DeepSeek-V3.1-Terminus
+api_url: https://api.siliconflow.cn/v1
 
 database:
   path: "stock_data.db"
