--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -108,3 +108,10 @@ webencodings==0.5.1
 websockets==15.0.1
 xlrd==2.0.2
 yarl==1.22.0
+langchain
+langchain-community
+langchain-openai
+sqlmodel
+sse-starlette
+jieba
+snscrape
