--- a/example.config.yaml
+++ b/example.config.yaml
@@ -14,6 +14,9 @@ api_keys:
   # LLM Providers (Optional, used by some skills)
   openai: "sk-xxxxxxxxxxxx"
   siliconflow: "sk-xxxxxxxxxxxx"
+
+  # Macro Data (https://fred.stlouisfed.org/)
+  fred_api_key: "abcdefxxxxxxxxxxxx"
 model: deepseek-ai/DeepSeek-V3.1-Terminus
 api_url: https://api.siliconflow.cn/v1
 
