--- a/requirements.txt
+++ b/requirements.txt
@@ -109,6 +109,7 @@ importlib_resources==6.5.2
 iniconfig==2.3.0
 Jinja2==3.1.6
 jiter==0.12.0
+jieba==0.42.1
 joblib==1.5.2
 jsonpatch==1.33
 jsonpath==0.82.2
